# svg-mcp

./: .gitignore  AGENTS.md  Makefile  README.md  devenv-0.1.0.vsix  devenv.local.nix.example  devenv.local.yaml.example  devenv.nix  devenv.uv2nix.nix  devenv.yaml  flake.nix  main.py  overrides.nix  pyproject.toml
src/svg_mcp/: __init__.py  _helpers.py  canvas.py  server.py
src/svg_mcp/tools/: __init__.py  batch.py  canvas_mgmt.py  drawing.py  elements.py  history.py  zorder.py
tests/: conftest.py  test_batch.py  test_canvas.py  test_canvas_mgmt.py  test_drawing.py  test_elements_zorder.py  test_helpers.py  test_history.py
