[project]
name = "svg-mcp"
version = "0.1.0"
description = "MCP server for drawing SVGs on a persistent canvas and exporting as SVG or PNG"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cairosvg>=2.8.2",
    "click>=8.3.1",
    "fastmcp>=3.1.0",
    "mcp[cli]>=1.26.0",
]

[project.scripts]
svg-mcp = "svg_mcp:mcp.run"

[tool.uv.sources]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
