[project]
name = "svg-mcp"
version = "0.1.0"
description = "MCP server for drawing SVGs on a persistent canvas and exporting as SVG or PNG"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cairosvg>=2.8.2",
    "click>=8.3.1",
    "fastmcp>=3.1.0",
    "mcp[cli]>=1.26.0",
]

[project.scripts]
svg-mcp = "svg_mcp:mcp.run"

[tool.uv.sources]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "black>=26.3.0",
    "isort>=8.0.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["svg_mcp"]
branch = true

[tool.coverage.report]
show_missing = true
omit = ["tests/*"]

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.black]
line-length = 88
target-version = ["py314"]
